# hm2_14

./: .env.example  README.md  alembic.ini  biggest_sq.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 682a9261bc88_init.py  a0d2f7f90a6b_confirm_email.py  edf3146abfc9_init.py
docs/: conf.py  index.rst
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
src/: schemas.py
src/conf/: config.py
src/db/: db_connect.py  models.py
src/middlewares/: middlewares.py
src/repository/: contacts.py  users.py
src/routes/: auth.py  contacts.py  users.py
src/services/: auth.py  email.py
src/services/templates/registration/: confirm.html
src/services/templates/reset_password/: password_reset_email.html
src/utils/: phone_number.py
tests/: conftest.py  contacts_repo_test.py  route_auth_test.py  test.db  users_repo_test.py
